--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_ca.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_ca.properties
@@ -25,6 +25,12 @@ E6A0C5A15C3487B8C4A9D4AF78A58BF0=Contribuidors a les metadades
 15D9D16A2C7B8B14101AEA8F6F86D9FF=Tipus físics
 BEE4E3AA0C747605A60835DD4098C95C=Característiques físiques
 
+# Messages from cat.xtec.merli.duc.client.dialogs.RemoveDialog
+
+60AB9566F6601D0E7FF11639394C08F4=Voleu suprimir aquesta entitat?
+EA4788705E6873B424C65E91C2846B19=Cancel·la
+F2A6C498FB90EE345D997F888FCE3B18=Suprimeix
+
 # Messages from cat.xtec.merli.duc.client.editors.lom.ResourceEditor
 
 2BADAEF0093EBA364F5BDB178C1DD132=Historial i estat actual
