--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_es.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_es.properties
@@ -24,6 +24,13 @@ E6A0C5A15C3487B8C4A9D4AF78A58BF0=Contribuidores a los metadatos
 
 15D9D16A2C7B8B14101AEA8F6F86D9FF=Tipos físicos
 BEE4E3AA0C747605A60835DD4098C95C=Características físicas
+
+# Messages from cat.xtec.merli.duc.client.dialogs.RemoveDialog
+
+60AB9566F6601D0E7FF11639394C08F4=¿Seguro que quiere suprimir la entidad?
+EA4788705E6873B424C65E91C2846B19=Cancelar
+F2A6C498FB90EE345D997F888FCE3B18=Suprimir
+
 # Messages from cat.xtec.merli.duc.client.editors.lom.ResourceEditor
 
 2BADAEF0093EBA364F5BDB178C1DD132=Histórico y estado actual
