Adds actions and error handling to the form portlets

--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_ca.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_ca.properties
@@ -97,8 +97,8 @@ WITHOUT_CHARGE=Lliure de càrrecs
 
 # == Identifier catalogs types (RFC-8141) =====================================
 
-ISBN=International Standard Book Number (ISBN)
-ISSN=International Standard Serial Number (ISSN)
+ISBN=ISBN
+ISSN=ISSN
 LEGAL_DEPOSIT=Dipòsit legal (NBN)
 MERLI=Referència interna
 OTHER_CATALOG=Un altre catàleg
