--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_es.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_es.properties
@@ -92,13 +92,13 @@ VISUAL_MEDIA=Medio visual
 
 # == Whether use of the resource requires payment (LOMv1.0) ===================
 
-REQUIRES_PAYMENT=Requiere pagamento
+REQUIRES_PAYMENT=Requiere pago
 WITHOUT_CHARGE=Sin recargos
 
 # == Identifier catalogs types (RFC-8141) =====================================
 
-ISBN=International Standard Book Number (ISBN)
-ISSN=International Standard Serial Number (ISSN)
+ISBN=ISBN
+ISSN=ISSN
 LEGAL_DEPOSIT=Depósito legal (NBN)
 MERLI=Referencia interna
 OTHER_CATALOG=Otro catálogo
