--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages.properties
@@ -6,6 +6,12 @@ AC1397CFBB59A26413AA70B2AFF117DB=Normal users of the resource
 C4D7568F7F2D74F1D106803B09104600=How the learning object is to be used
 EB1E24895041E5418996D6FECE267C7D=Typical learning environment
 
+# Messages from cat.xtec.merli.duc.client.dialogs.ErrorDialog
+
+05CF465B47AF2CEB91A3249DD6B2803C=Sorry, an unexpected error has occurred trying to process your request.
+8F85392CD6848023D1AE6BF32C41A436=Unexpected error
+D3D2E617335F08DF83599665EEF8A418=Close
+
 # Messages from cat.xtec.merli.duc.client.editors.lom.GeneralDetailsEditor
 
 693C1B5B512A7D10F46475A55F4E7512=Description of the content
