--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants.properties
@@ -97,8 +97,8 @@ WITHOUT_CHARGE=Free of charge
 
 # == Identifier catalogs types (RFC-8141) =====================================
 
-ISBN=International Standard Book Number (ISBN)
-ISSN=International Standard Serial Number (ISSN)
+ISBN=ISBN
+ISSN=ISSN
 LEGAL_DEPOSIT=Legal deposit (NBN)
 MERLI=Internal reference
 OTHER_CATALOG=Another catalog
