--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_ca.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_ca.properties
@@ -6,6 +6,12 @@ AC1397CFBB59A26413AA70B2AFF117DB=Usuaris habituals del recurs
 C4D7568F7F2D74F1D106803B09104600=Com s''utilitzarà l''objecte d''aprenentatge
 EB1E24895041E5418996D6FECE267C7D=Entorn d''aprenentatge típic
 
+# Messages from cat.xtec.merli.duc.client.dialogs.ErrorDialog
+
+05CF465B47AF2CEB91A3249DD6B2803C=Ho sentim, s''ha produït un error inesperat intentant processar la vostra sol·licitud.
+8F85392CD6848023D1AE6BF32C41A436=Error inesperat
+D3D2E617335F08DF83599665EEF8A418=Tanca
+
 # Messages from cat.xtec.merli.duc.client.editors.lom.GeneralDetailsEditor
 
 693C1B5B512A7D10F46475A55F4E7512=Descripció del contingut
