Implements new editors and refactors the existing ones

--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_es.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_es.properties
@@ -165,8 +165,8 @@ TOP_TERM=Término superior
 BROADER_TERM=Término más amplio
 NARROWER_TERM=Un término más específico
 RELATED_TERM=Término relacionado
-USE=Utilizar
-USE_FOR=Usar para
+USE=Uso
+USE_FOR=Usado por
 
 # Resource relationships (LOMv1.0)
 
